configs/gateway-api/kgateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    hostname: "*.kube.truebad0ur.space"
    allowedRoutes:
      namespaces:
        from: All
